--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Murder</h2>
             <h3>Mako</h3>
         </a>
-        <a class="hover" id="redorange" href="https://youtu.be/2vOOlvo2GU4">
+        <a class="hover" id="redorange" href="https://youtu.be/_0DlHmnGeIo">
             <h2>Gettin’ by<br>(‘그냥 그래)<br></h2>
             <h3>ONE</h3>
         </a>
@@ -72,14 +72,14 @@
             <h3>優里(Yuuri)</h3>
         </a>
         <a class="hover" id="redorange" href="https://youtu.be/_5EGUjXM_ls">
-            <h2>오빠</h2>
+            <h2>오빠 (Oppa)</h2>
             <h3>Owol - Nuna(오월 - 들이대 (누나))(Cover by Nessy(네시))</h3>
         </a>
         <a class="hover" id="pinkskyblue" href="https://youtu.be/TcytstV1_XE">
             <h2>Don’t Forget<br>(잊어버리지마)</h2>
             <h3>Crush(크러쉬)<br>(ft.Taeyeon(태연))</h3>
         </a>
-        <a class="hover" id="redorange" href="https://youtu.be/x8VYWazR5mE">
+        <a class="hover" id="redorange" href="https://youtu.be/byaFSe7wVws">
             <h2>Home<br>(퇴근)</h2>
             <h3>SHAUN(숀), OVAN(오반)</h3>
         </a>
@@ -123,7 +123,7 @@
             <h2>Blueberry Eyes</h2>
             <h3>MAX<br>(ft.SUGA of BTS)</h3>
         </a>
-        <a class="hover" id="pinkskyblue" href="https://youtu.be/x8VYWazR5mE">
+        <a class="hover" id="pinkskyblue" href="https://youtu.be/jYcGHGiFkMo">
             <h2>You and Me From The Beginning</h2>
             <h3>BOL4(볼빨간사춘기)</h3>
         </a>
